creating a proper way of image position and icons on it

--- a/index.html
+++ b/index.html
@@ -53,5 +53,62 @@
 <!-- Our Top Movers -->
 <section class="ourtop">
     <h1><span>Our Top</span> Movers</h1>
+<div class="cardcontainer">
+    <div class="card">
+        <img src="./assets/images/ehem 1.png" alt="">
+        <h>A+ Movers</h>
+        <div class="force" >
+            <span1 class="icon">4</span1>
+            <span1 class="icon">2</span1>
+            <span1 class="icon">#2</span1>
+        </div>
+    </div>
+    <div class="card">
+        <img src="./assets/images/wewe 1.png" alt="">
+        <h>Maridadi Home Logistics</h>
+        <div class="force" >
+            <span1 class="icon">4</span1>
+            <span1 class="icon">2</span1>
+            <span1 class="icon">#2</span1>
+        </div>
+    </div>
+    <div class="card">
+        <img src="./assets/images/movers 1.png" alt="">
+        <h>Ufalme Movers</h>
+        <div class="force" >
+            <span1 class="icon">4</span1>
+            <span1 class="icon">2</span1>
+            <span1 class="icon">#2</span1>
+        </div>
+    </div>
+    <div class="card">
+        <img src="./assets/images/chapchap 1.png" alt="">
+        <h>Mover Chapchap</h>
+        <div class="force" >
+            <span1 class="icon">4</span1>
+            <span1 class="icon">2</span1>
+            <span1 class="icon">#2</span1>
+        </div>
+    </div>
+    <div class="card">
+        <img src="./assets/images/mashinani 1.png" alt="">
+        <h>Songa Mashinani</h>
+        <div class="force" >
+            <span1 class="icon">4</span1>
+            <span1 class="icon">2</span1>
+            <span1 class="icon">#2</span1>
+        </div>
+    </div>
+    <div class="card">
+        <img src="./assets/images/songa 1.png" alt="">
+        <h>Upesi Logistics</h>
+        <div class="force" >
+            <span1 class="icon">4</span1>
+            <span1 class="icon">2</span1>
+            <span1 class="icon">#2</span1>
+        </div>
+    </div>
+        
 </section>
+
 </html>
