--- a/index.html
+++ b/index.html
@@ -110,5 +110,11 @@
     </div>
         
 </section>
+<!-- footer -->
+<section class="footer">
+    <h1>
+        Move at a tap of <span2>a button</span2>
+    </h1>
+</section>
 
 </html>
