making navigation bar

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -12,6 +12,19 @@
     </style>
 </head>
 <body>
-    
+    !-- Top part code -->
+    <section class="header">
+    <nav class="navbar">
+            <ul>
+                <li><a href="#">Nav Link</a></li>
+                <li><a href="#">Nav Link</a></li>
+                <li><a href="#">Nav Link</a></li>
+                <li><a href="#">Nav Link</a></li>
+                <li><button class="work"><a href="#">Work with us
+                    <span>&#8594;</span>
+                </a></button></li>
+            </ul>
+    </nav>
+    </section>
 </body>
 </html>
