div part of house location and price per sq and border line div

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -27,7 +27,11 @@
     </nav>
     </section>
     <section class="bigpart">
-        
+        <div class="modern">
+            <div class="line">
+                <!-- line -->
+            </div>
+        </div>
     </section>
 </body>
 </html>
