--- a/movers/movers.html
+++ b/movers/movers.html
@@ -31,6 +31,17 @@
             <div class="line">
                 <!-- line -->
             </div>
+        <div class="side" >
+ 
+            <div class="leftside">
+            <h1>Modern House</h1>
+            <p>3002 Foster Ave Brooklyn, NY 11210, USA</p>
+            </div>
+            <div class="rightside">
+            <h1>$450,000</h1>
+            <p>$2,800/sq ft</p>
+            </div>
+        </div>
         </div>
     </section>
 </body>
