pictures and form to fill and avatar

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -43,6 +43,25 @@
             </div>
         </div>
         </div>
+        <section class="picform">
+            <div class="pic">
+            <div style="display: flex;" class="kitchen">
+                <img src="../assets/images/Property House.png" alt="Kitchen">
+                <ul class="pro" >
+                    <li id="kayley" style="background-color: rgb(243, 243, 243); margin-top: 0.rem;" >
+                    <img class="avatar" src="../assets/images/avatar.png">Kayley Hal<span5 >view profile<span5></li>
+                    <li id="kayley">Name</li>
+                    <li id="kayley">Phone</li>
+                    <li id="kayley">Email</li>
+                    <li id="kayley">Hello am intrested in...</li>
+                    <li id="kaybutton"><a href="#">
+                        Learn More
+                        <span2>&#8594;</span2></a>
+                    </button></li>
+                </ul>
+            </div>
+        </div>
+        </section>
     </section>
 </body>
 </html>
