pictures in grid way

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -62,6 +62,31 @@
             </div>
         </div>
         </section>
+        <div class="picrow">
+            <div class="content">
+            <img src="../assets/images/Rectangle.png" alt="0">
+            </div>
+            <div class="content">
+            <img src="../assets/images/Rectangle-1.png" alt="Dog">
+            </div>
+            <div class="content">
+            <img src="../assets/images/Rectangle-2.png" alt="Covers">
+            </div>
+            <div class="content">
+            <img src="../assets/images/Rectangle-3.png" alt="Night View">
+            </div>
+            <div class="content">
+            <img src="../assets/images/Rectangle-4.png" alt="Plan">
+            </div>
+            <div class="content">
+            <img src="../assets/images/Rectangle-5.png" alt="B">
+            </div>
+            <div class="content">
+            <img src="../assets/images/Rectangle-6.png" alt="Lights">
+            </div>
+        
+        </div>
+        </div>
     </section>
 </body>
 </html>
