creating the detail part

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -87,6 +87,17 @@
         
         </div>
         </div>
+    <!-- Details -->
+<div class="details">
+    <h class="dep">Details</h>
+    <div >
+        <span class="icon">4</span>
+        <span class="icon">2</span>
+        <span class="icon">#2</span>
+        <span class="icon">1</span>
+        <span class="icon">2007</span>
+    </div>    
+</div>
     </section>
 </body>
 </html>
