creating description part

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -98,6 +98,13 @@
         <span class="icon">2007</span>
     </div>    
 </div>
+<!-- Description -->
+<div class="details">
+    <p class="dep" >Description.</p>
+    <p class="lorem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam aspernatur illo veritatis eligendi mollitia tempora, consectetur qui? Exercitationem quos nihil delectus debitis dignissimos incidunt in excepturi tenetur ex, pariatur ipsum neque expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus excepturi aliquam earum voluptatibus at reiciendis suscipit maxime corrupti harum, sit voluptate vel quasi quos inventore cupiditate. Porro fugiat praesentium cumque. </p>
+    <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolorum expedita saepe. Dicta vero ducimus perferendis tenetur minima natus harum dolore molestiae. Architecto, veniam! Incidunt in a ut doloribus saepe!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maxime earum doloremque, est facere consequuntur? Ipsa commodi dolore enim at veniam cupiditate accusantium doloribus, ipsam iusto odio porro consectetur possimus!</p>
+    <p class="lorem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus quia quos earum cumque eligendi! Recusandae laborum, minima tenetur beatae, culpa nulla dolore voluptatibus optio iure deleniti, facilis accusantium eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vero voluptate distinctio. Cum mollitia numquam quisquam facilis nisi, consequatur sint dolorum fuga. Laudantium ratione a quae libero facilis voluptate aspernatur.</quos></p>
+</div>
     </section>
 </body>
 </html>
