features part paragraph

--- a/movers/movers.html
+++ b/movers/movers.html
@@ -105,6 +105,9 @@
     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolorum expedita saepe. Dicta vero ducimus perferendis tenetur minima natus harum dolore molestiae. Architecto, veniam! Incidunt in a ut doloribus saepe!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maxime earum doloremque, est facere consequuntur? Ipsa commodi dolore enim at veniam cupiditate accusantium doloribus, ipsam iusto odio porro consectetur possimus!</p>
     <p class="lorem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus quia quos earum cumque eligendi! Recusandae laborum, minima tenetur beatae, culpa nulla dolore voluptatibus optio iure deleniti, facilis accusantium eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vero voluptate distinctio. Cum mollitia numquam quisquam facilis nisi, consequatur sint dolorum fuga. Laudantium ratione a quae libero facilis voluptate aspernatur.</quos></p>
 </div>
+<div class="details" >
+    <p class="dep" >Features</p> <hr>
+</div>
     </section>
 </body>
 </html>
